# downtube

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  README.md  casaos-app.json  docker-compose.yml
.github/workflows/: ci.yml  docker.yml  release.yml
backend/: pyproject.toml  requirements.txt
backend/src/downtube/: __init__.py  config.py  main.py  schemas.py
backend/src/downtube/api/: __init__.py  downloads.py  health.py  library.py  playlists.py  preview.py  search.py  settings.py
backend/src/downtube/core/: __init__.py  constants.py  events.py  exceptions.py  logger.py
backend/src/downtube/db/: __init__.py  models.py  session.py
backend/src/downtube/db/repositories/: library.py  playlists.py  queue.py  settings.py
backend/src/downtube/providers/: base.py  lyrics.py  musicbrainz.py  registry.py  router.py  spotify.py  spotify_embed.py  tagger.py  ytdlp.py  ytmusic.py
backend/src/downtube/services/: download.py  library.py  metadata.py  playlist.py  search.py  settings.py
backend/src/downtube/worker/: pipeline.py  queue_processor.py  sse.py
backend/tests/: test_api.py  test_router.py
docker/: Dockerfile  entrypoint.sh
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
frontend/src/: App.vue  style.css
frontend/src/__tests__/api/: index.test.ts
frontend/src/api/: index.ts
frontend/src/components/: AppSidebar.vue  BottomTabBar.vue  DownloadsView.vue  PlaylistsView.vue  SearchView.vue  SettingsView.vue
frontend/src/composables/: useDownloads.ts  useSSE.ts  useTheme.ts
(+7 files in other folders)
